# capnzero

./: .gitignore  README.md
CapnZeroDebugUtils/: README.md  capnz.bash  echo.py  generate_compile_comand.py  schemautils.py  update_index.py
capnprot_performance_test/include/capnzero-base-msgs/: string.capnp.c++  string.capnp.h
capnprot_performance_test/msg/: string.capnp
capnprot_performance_test/src/: echo.cpp  pub.cpp
capnproto_performance_test/: CMakeLists.txt  package.xml
capnproto_performance_test/include/: Statistics.h
capnproto_performance_test/include/capnproto/: CapnZero.h  Common.h  Publisher.h  Subscriber.h
capnproto_performance_test/include/capnproto-base-msgs/: Testmessage.capnp.c++  Testmessage.capnp.h  person.capnp.c++  person.capnp.h  string.capnp.c++  string.capnp.h
capnproto_performance_test/include/capnzero/: Common.h  Publisher.h  Subscriber.h
capnproto_performance_test/msg/: Testmessage.capnp  person.capnp  string.capnp
capnproto_performance_test/result_storage/: result.csv
capnproto_performance_test/src/: CapnprotoPerformanceTest.cpp  Parrot.cpp  Parrot_subscriber.cpp  Publisher.cpp  Statistics.cpp  capnzeroPerformancetest.cpp  echo.cpp  pub.cpp
capnzero/: CMakeLists.txt  README.md  package.xml
capnzero/include/capnzero/: CapnZero.h  Common.h  Publisher.h  Subscriber.h
capnzero/include/capnzero-base-msgs/: string.capnp.c++  string.capnp.h
capnzero/msg/: string.capnp
capnzero/src/: Publisher.cpp  Subscriber.cpp  echo.cpp  pub.cpp
capnzero_eval/: CMakeLists.txt  CapnZeroEval-TCP.csv  CapnZeroEval.csv  package.xml
capnzero_eval/cmake/: FindZeroMQ-LICENSE.txt
capnzero_eval/include/: ExperimentLog.h  Statistics.h
capnzero_eval/include/capnzero-eval-msgs/: EvalMessage.capnp.c++  EvalMessage.capnp.h  EvalMessageCapnZero.capnp.c++  EvalMessageCapnZero.capnp.h
capnzero_eval/msg/: EvalMessage.capnp  EvalMessageCapnZero.capnp  EvalMessageRos.msg
capnzero_eval/results/: CapnZeroEval-27_09_2019-ROS-Segfault2049.csv  CapnZeroEval.csv  CapnZeroEval.ods  CapnZeroEvalRos-OLD.ods  CapnZeroEvalRos.ods
capnzero_eval/src/: CapnZeroEvaluation.cpp  CapnZeroParrot.cpp  ExperimentLog.cpp  Parrot.cpp  Statistics.cpp
commad_capnzero/: CMakeLists.txt  package.xml
commad_capnzero/include/capnzero/: ProcessCommand.capnp  ProcessCommand.capnp.c++  ProcessCommand.capnp.h
command_capnzero/: CMakeLists.txt  package.xml
command_capnzero/include/capnzero/: RobotCommand.capnp  RobotCommand.capnp.c++  RobotCommand.capnp.h
discovery/: CMakeLists.txt  package.xmlout
discovery/include/discovery/: Agent.h
discovery/src/: Agent.cpp  Discovery.cpp  SendTest.cpp
discovery_msgs/: CMakeLists.txt  package.xml
discovery_msgs/cmake/: FindCapnProto.cmake
discovery_msgs/msg/: beacon.capnp
discovery_msgs/src/: beacon.capnp.c++  beacon.capnp.h
id/: CMakeLists.txt  package.xml
id/include/capnzero/: ID.capnp  ID.capnp.c++  ID.capnp.h
id_capnzero/: CMakeLists.txt  package.xml
id_capnzero/include/capnzero/: ID.capnp  ID.capnp.c++  ID.capnp.h
rosmq/: CMakeLists.txt  package.xml
rosmq/cmake/: rosmq-extras.cmake
rosmq/include/rosmq/: Common.h  Publisher.h  Subscriber.h
rosmq/src/: Publisher.cpp  Subscriber.cpp  echo.cpp  pub.cpp
rosperformance_test/: CMakeLists.txt  package.xml
rosperformance_test/include/: Statistics.h
rosperformance_test/msg/: Msgs.msg
rosperformance_test/result_storage/: result.csv
rosperformance_test/src/: Parrot_subcriber.cpp  ROSPerformanceTest.cpp  Statistics.cpp  Statistics.h
