<?xml version="1.0"?>
<package format="2">
  <name>capnproto_performance_test</name>
  <version>0.0.0</version>
  <description>The capnproto_performance_test package</description>

  <maintainer email="tonmoyibnearif@gmail.com">Tonmoy</maintainer>


  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>capnzero</depend>
  <depend>ZeroMQ</depend>
    <depend>CapnProto</depend>
  <depend>capnproto_messages</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
