<?xml version="1.0"?>
<package>
  <name>capnzero</name>
  <version>0.0.0</version>
  <description>The capnzero package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
