<?xml version="1.0"?>
<package format="2">
  <name>commad_capnzero</name>
  <version>0.0.0</version>
  <description>The commad_capnzero package</description>

  <maintainer email="jakob@vs.uni-kassel.de">Stefan Jakob</maintainer>

  <license>MIT</license>

  <depend>capnzero</depend>
  <depend>id_capnzero</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
