<?xml version="1.0"?>
<package format="2">
  <name>rosperformance_test</name>
  <version>0.0.0</version>
  <description>The rosperformace_test package</description>


  <maintainer email="tonmoy@todo.todo">tonmoy</maintainer>



  <license>TODO</license>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <buildtool_depend>catkin</buildtool_depend>



  <export>


  </export>
</package>
