<?xml version="1.0"?>
<package format="2">
  <name>rosperformance_test</name>
  <version>0.0.0</version>
  <description>The rosperformace_test package</description>



  <maintainer email="tonmoy@todo.todo">tonmoy</maintainer>



  <license>TODO</license>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <buildtool_depend>catkin</buildtool_depend>



  <export>


  </export>
</package>
